# java-native-interface-jni-tutorial

./: README.md
src/: CMakeLists.txt  HelloWorld.c  Makefile  build.bat  readme  run.bat  run.sh
src/HelloWorld/: CMakeLists.txt  HelloWorld.h  HelloWorld.java  HelloWorld_TestHelloWorld.c  HelloWorld_TestHelloWorld.h  Makefile  TestHelloWorld.c  TestHelloWorld.java
src/InstanceFieldAccess/: CMakeLists.txt  InstanceFieldAccess.java  InstanceFieldAccess_TestInstanceFieldAccess.c  InstanceFieldAccess_TestInstanceFieldAccess.h  Makefile  TestInstanceFieldAccess.java
